add truncate
